tests/conformance/syntax/negative/tuple_projection_bad_index.ditt
module Syntax.TupleProjectionBad where

postulate A : Cat
postulate B : Cat
bad (p : (A * B)) : A = p.3
